@@ -58,7 +58,7 @@ function uint16_t htons (uint16_t)
 function uint32_t ntohl (uint32_t)
 function uint16_t ntohs (uint16_t)
 
-allow-header intttypes.h
+allow-header inttypes.h
 allow-header arpa/inet.h
 
 constant INET6_ADDRSTRLEN 46
