@@ -1,3 +1,12 @@
+2001-08-18  Ulrich Drepper  <drepper@redhat.com>
+
+	* conform/conformtest.pl: Change namespace test to take #undef
+	lines into account.
+
+	* conform/data/netinet/in.h-data: Fix typo in allow-header line.
+
+	* conform/data/sys/socket.h-data: Add sockatmark.
+
 2001-08-17  Ulrich Drepper  <drepper@redhat.com>
 
 	* io/fts.c: Update from recent BSD source.
